[gd_scene load_steps=4 format=3 uid="uid://dwvk6jxshs8p7"]

[ext_resource type="Texture2D" uid="uid://b10bfxepsuv3i" path="res://icon.svg" id="1_4flbx"]
[ext_resource type="Script" uid="uid://c853djerfuf8x" path="res://player.gd" id="1_onrkg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_onrkg"]

[node name="Player" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 9
script = ExtResource("1_onrkg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -66)
texture = ExtResource("1_4flbx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -81)
scale = Vector2(8, 8)
shape = SubResource("CircleShape2D_onrkg")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 1.6
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
